--- a/data/index.html
+++ b/data/index.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ESP32 Demo Site</title>
-<link rel="stylesheet" href="cream-all-mn.css">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-<script src="index.js"></script>
+  <meta charset="utf-8">
+  <title>pax-Gateway</title>
+  <meta name="description" content="ESP32 Demo site">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="cream-all-mn.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <script type="module" src="./index.js"></script>
 </head>
+
 <body>
-<section>
-    <div>ESP32 Demo Site</div>
-    <div>
-        <ul>
-            <li>Home</li>
-            <li>Settings</li>
-            <li>About</li>
-        </ul>
-    </div>
-</section>
-<section>
-    <div>
-        <button id="btnTestA">Test A</button>
-        <button id="btnTestB">Test B</button>
-    </div>
-</section>
+  <header>
+    <h1 class="c-main">pax-Gateway</h1>
+    <!-- <h2>This is a dynamically created ESP32 demo page</h2> -->
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="settings.html">Settings</a>
+      <a href="about.html">About</a>
+      <a href="https://github.com/CalinRadoni">GitHub</a>
+    </nav>
+  </header>
+  <main>
+    <form id="settings"></form>
+  </main>
+  <footer>
+    <cream-row>
+      <cream-card>
+        <p id="currentTime">...</p>
+      </cream-card>
+      <cream-card>
+        <p id="log"></p>
+      </cream-card>
+    </cream-row>
+  </footer>
 </body>
+
 </html>
